add OG time table

--- a/assignment1/Timetable.html
+++ b/assignment1/Timetable.html
@@ -2,8 +2,8 @@
 <head>
    <title>time table</title>
 </head>
-<body bgcolor="skyblue">
-<h1 align="center" The time table for class VIII</h1>
+<body bgcolor="green">
+<h1 align="center" >The time table for class VIII</h1>
 <table border="2" cellspacing="8" align="center">
 <tr>
  <td  align="center">Day of the week
@@ -18,7 +18,7 @@
 </tr>
 <tr>
  <td align="center">MONDAY
- <td align="center">MATH<td align="center">Scienc</td> English<br>
+ <td align="center">MATH<td align="center">Science</td> 
  <td align="center">English<br>
  <td align="center">Hindi<br>
  <td rowspan="6"align="center">L<br>U<br>N<br>C<br>H
