time table updated

--- a/assignment1/Timetable.html
+++ b/assignment1/Timetable.html
@@ -41,8 +41,8 @@
  <td align="center">English<br>
  <td align="center">Science<BR>
  <td align="center">Hindi<br>
- <td align="center">Social science
- <td colspan="3" align="center"><font color="green"> lab
+ <td align="center">Social science<br>
+ <td colspan="3" align="center"><font color="Black"> lab
 </tr>
 <tr>
  <td align="center">THURSDAY
